kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-front
  template:
    metadata:
      labels:
        app: whoami-front
    spec:
      containers:
      - name: whoami-front
        image: neroalfonso/whoami:1.0.0
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
