kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-front
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: whoami-front
